--- a/public/index.html
+++ b/public/index.html
@@ -14,4 +14,10 @@
   <body>
     <div id="root"></div>
   </body>
+  <script>
+    window.onload = (event) => {
+      console.log("Zooming out");
+      window.body.style.zoom = "90%";
+    };
+  </script>
 </html>
