--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,9 @@
     <div id="root"></div>
   </body>
   <script>
-    window.onload = (event) => {
-      console.log("Zooming out");
-      window.body.style.zoom = "90%";
-    };
+    // window.onload = (event) => {
+    //   console.log("Zooming out");
+    //   document.body.style.zoom = "90%"; // Not what I need
+    // };
   </script>
 </html>
